--- a/src/sass/3-item/_tab-menu.scss
+++ b/src/sass/3-item/_tab-menu.scss
@@ -14,7 +14,7 @@
 .tab-menu {
   width: fit-content;
   max-width: 100%;
-  height: var(--ui-md);
+  height: var(--ui-sm);
   // margin: 0 auto;
   @include flex.flex-c;
   gap: size.$s1;
@@ -26,6 +26,7 @@
 
   @include bp.bp(xs) {
     gap: var(--3xs);
+    height: var(--ui-md);
   }
 }
 
